# noteboard

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py  start.sh
app/: __init__.py  config.py
app/api/: __init__.py  chat.py  notes.py  settings.py  sync.py
app/models/: __init__.py  note.py  settings.py
app/services/: __init__.py  apple_notes.py  backboard.py  cache.py  chunking.py
app/static/css/: styles.css
app/templates/: base.html  chat.html  notes.html  settings.html
